--- a/summer/public/css/style.css
+++ b/summer/public/css/style.css
@@ -15,6 +15,8 @@ link & button
 h1.cta-title
 {
 	font-size: 43px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+
 }
 h1
 {
@@ -55,11 +57,11 @@ Header
 	margin-bottom: 0px;
 }
 .navbar-brand {
-	height: inherit;
-	font-family: 'Josefin Slab', serif;
-	font-weight: 700;
-	text-transform: uppercase;
-	padding: 5px;
+    height: inherit;
+    font-family: 'Josefin Slab', serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 5px;
     font-size: 42px;
     margin-top: 5px;
 }
@@ -524,7 +526,7 @@ margin-top: 5px;
 }
 #banner
 {
-    background: url('../img/banner-bg.jpg') no-repeat;
+    background: url('../banner-bg.jpg') no-repeat;
     background-size: cover;
     min-height: 500px;
 }
@@ -592,10 +594,11 @@ cta
     padding-top: 15px;
 }
 .jumbotron h1.small {
-    font-size: 44px;
+    font-size: 35px;
 }
 h1.cta-title {
     font-size: 30px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 p.cta-sub-title {
     font-size: 20px;
@@ -632,6 +635,7 @@ p.cta-sub-title {
 }
 h1.cta-title {
     font-size: 30px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 p.cta-sub-title {
     font-size: 20px;
