--- a/summer/public/css/style.css
+++ b/summer/public/css/style.css
@@ -526,7 +526,7 @@ margin-top: 5px;
 }
 #banner
 {
-    background: url('../banner-bg.jpg') no-repeat;
+    background: url('../03.jpg') no-repeat;
     background-size: cover;
     min-height: 500px;
 }
